@@ -49,6 +49,7 @@ online-store/
 CREATE DATABASE online_store DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
 ```
 3. 修改`application.yml`中的数据库和Redis配置
+4. 添加vm参数：`--add-opens java.base/java.lang=ALL-UNNAMED` 
 4. 运行应用程序：
 ```bash
 mvn spring-boot:run
